Fix scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
 body, html {
 	padding: 0;
 	margin: 0;
-	width: 100%;
-	height: 100%;
 }
+
 
 #wrapper, #glasspane {
 	width: 960px; /* match canvas width */
